<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">eyeCam</string>
    
    <!-- Color's -->
     <string name="color_black">Black</string>
    <string name="color_grey">Gray</string>
    <string name="color_dark_grey">Dim Gray</string>
    <string name="color_white">White</string>
    <string name="color_red">Red</string>
    <string name="color_brown">Brown</string>
    <string name="color_light_brown">Light Brown</string>
    <string name="color_cioccolato">Cioccolato</string>
    <string name="color_purple">Purple</string>
    <string name="color_violet">Violet</string>
    <string name="color_orange">Orange</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_dark_green">Dark Green</string>
    <string name="color_forest_green">Forest Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_turquoise">Turquoise</string>
    <string name="color_unknown">Unknown</string>
    <string name="color_gray_blue">Gray Blue</string>
    <string name="color_light_blue">Light Blue</string>
    <string name="color_dark_blue">Dark Blue</string>
    <string name="color_bordeaux">Bordeaux</string>
    <string name="color_maroon">Maroon</string>
    <string name="color_azure">Azure</string>
    <string name="color_lime">Lime</string>
    <string name="color_cream">Cream</string>
    <string name="color_regal_blue">Regal Blue</string>
    <string name="color_teal">Teal</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_deep_blue">Deep Blue</string>
    <string name="color_ocean_green">Ocean Green</string>
    <string name="color_indigo">Indigo</string>
    <string name="color_bright_green">Bright Green</string>
    <string name="color_walnut">Walnut</string>
    <string name="color_olive">Olive</string>
    <string name="color_merlot">Merlot</string>
    <string name="color_plum">Plum</string>
    <string name="color_rust">Rust</string>
    <string name="color_light_yellow">Hellgelb</string>
    <string name="color_crimson">Crimson</string>
    <string name="color_rose">Rose</string>
    <string name="color_amber">Amber</string>
    <string name="color_pink">Pink</string>
    
    <!-- Filter's -->
    <string name="title_primary_filter">Primary Filter</string>
    <string name="title_secondary_filter">Secondary Filter</string>
    
	<string name="filter_none">no filter</string>
	<string name="filter_none_summary">No transformation to the picture from the camera will be applied</string>
	<string name="filter_simulate">colorblind simulation</string>
	<string name="filter_simulate_summary">This filter simulates how colorblind people perceive the world</string>
	<string name="filter_false_colors">false colors</string>
	<string name="filter_false_colors_summary">This filter works by changing Blue/Green to Yellow/Red</string>
	<string name="filter_intensify">intensify color difference</string>
	<string name="filter_intensify_summary">This filter enhances Green and weakens Red</string>
	<string name="filter_daltonize">Daltonize</string>
	<string name="filter_daltonize_summary">Daltonize shifts colors not visible by colorblind people into visible ones</string>

	<string name="filter_partial">Enable partial filter</string>
	<string name="filter_partial_summary">The selected filter will only be applied on part of the preview. Does not work with Daltonize, simulation and no filter</string>
	
	<string name="filter_running">is running</string>
	<string name="info_longpress_filter">You can longpress on the filter button to change the filter settings</string>
	
	<!-- Settings -->
    <string name="setting_size_small">small</string>
	<string name="setting_size_medium">medium</string>
	<string name="setting_size_large">large</string>

	<string name="setting_textsize_title">Popup Text size</string>
	<string name="setting_textsize_summary">Change the text size of the color recognition popup</string>
	
	<string name="setting_no_title">No title specified</string>
	<string name="setting_additional">Additional settings</string>

	<string name="setting_color_recogniton">Color recognition options</string>
	<string name="setting_color_rgb">Show RGB values</string>
	<string name="setting_color_rgb_summary">Show the RGB values of the recognised color inside the popup</string>
	<string name="setting_color_hsv">Show HSV values</string>
	<string name="setting_color_hsv_summary">Show the HSV values of the recognised color inside the popup</string>
	
	<string name="setting_feedback">Y U No Feedback</string>
	<string name="setting_feedback_summary">Brings you to Google Play where you can rate eyeCam, request features or yell at us</string>
	<string name="setting_intro">Introduction</string>
	<string name="setting_intro_summary">Opens the introduction as seen when eyeCam was first started</string>
	
	<!-- Introduction Strings -->
	<string name="intro_welcome">Welcome to eyeCam</string>
	<string name="intro_problem">eyeCam was designed to help support colorblind people with the following problems:</string>
	<string name="intro_colorrecognition">Colorrecognition</string>
	<string name="intro_separation_colorareas">Separation of color areas</string>
	<string name="intro_solution">In order to help you master these problems we offer the following features:</string>
	<string name="intro_on_touch_colorrecognition">On touch colorrecognition</string>
	<string name="intro_live_color_filters">Different live filters</string>
	<string name="intro_next">next</string>
	<string name="intro_singleclick_filter">Switch between two different filter.</string>
	<string name="intro_singleclick_play">Start and stop camera preview.</string>
	<string name="intro_singleclick_led">Switch LED light of your device on and off.</string>
	<string name="intro_longclick_filter">Lets you choose different filters for the currently running preview. You will be presented with an option menu where each filter is shortly described.</string>
	<string name="intro_menu_filter">Will show a filter selection for running filter as a context menu</string>
	<string name="intro_singleclick_previewscreen">Touching any area of the preview screen will bring up a popup telling you the color. You can try it in the picture below.</string>
	<string name="intro_longclick_previewscreen">A long click on the preview screen brings up an options menu where you can change general settings for the colorrecognition and/or give feedback.</string>
	<string name="intro_finish">finish</string>
	<string name="intro_singleclick">single click</string>
	<string name="intro_longclick">long click</string>
	<string name="intro_menu_preview">Will show a general options menu for the colorrecognition popup</string>
</resources>
